force-app/main/default/objects/clariti__CashierSession__c/clariti__CashierSession__c.object-meta.xml
<CustomObject>
    <label>Cashier Session</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Cashier Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cashier Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>