force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__BankDeposit__c.field-meta.xml
<CustomField>
    <fullName>clariti__BankDeposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Deposit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only closed Cashier Sessions can be added to a Bank Deposit.</errorMessage>
        <filterItems>
            <field>clariti__BankDeposit__c.clariti__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filterItems>
        <filterItems>
            <field>$Source.clariti__Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clariti__BankDeposit__c</referenceTo>
    <relationshipLabel>Cashier Sessions</relationshipLabel>
    <relationshipName>CashierSessions</relationshipName>
    <type>Lookup</type>
</CustomField>