force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__Cashier__c.field-meta.xml
<CustomField>
    <fullName>clariti__Cashier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cashier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cashier_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>