force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__CashTray__c.field-meta.xml
<CustomField>
    <fullName>clariti__CashTray__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cash Tray</label>
    <referenceTo>clariti__CashTray__c</referenceTo>
    <relationshipLabel>Cashier Sessions</relationshipLabel>
    <relationshipName>CashierSessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>