force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__CloseOutBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__CloseOutBalance__c</fullName>
    <formula>(clariti__CloseOutCashBalance__c + clariti__CloseOutCheckBalance__c) - (clariti__CloseOutCashTrayCashBalance__c + clariti__CloseOutCashTrayCheckBalance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Out Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>