force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__CloseOutBalanceStatus__c.field-meta.xml
<CustomField>
    <fullName>clariti__CloseOutBalanceStatus__c</fullName>
    <formula>IF(NOT(ISPICKVAL(clariti__Status__c , &apos;Open&apos;)) &amp;&amp; (clariti__CloseOutCashBalance__c != clariti__CloseOutCashTrayCashBalance__c ) || (clariti__CloseOutCheckBalance__c != clariti__CloseOutCashTrayCheckBalance__c), &apos;Out of Balance&apos;, &apos;Balanced&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Out Balance Status</label>
    <type>Text</type>
</CustomField>