force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__CloseOutCashTrayCheckBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__CloseOutCashTrayCheckBalance__c</fullName>
    <label>Close Out Cash Tray Check Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>