force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__Location__c.field-meta.xml
<CustomField>
    <fullName>clariti__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>MUSW__Location__c</referenceTo>
    <relationshipLabel>Cashier Sessions</relationshipLabel>
    <relationshipName>CashierSessions</relationshipName>
    <type>Lookup</type>
</CustomField>