force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__Notes__c.field-meta.xml
<CustomField>
    <fullName>clariti__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>