force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__TotalCashDepositBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalCashDepositBalance__c</fullName>
    <label>Total Cash Deposit Balance</label>
    <summarizedField>clariti__CashDeposit__c.clariti__CashBalance__c</summarizedField>
    <summaryForeignKey>clariti__CashDeposit__c.clariti__CashierSession__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>