force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__TotalCheckDepositBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalCheckDepositBalance__c</fullName>
    <label>Total Check Deposit Balance</label>
    <summarizedField>clariti__CashDeposit__c.clariti__CheckBalance__c</summarizedField>
    <summaryForeignKey>clariti__CashDeposit__c.clariti__CashierSession__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>