force-app/main/default/objects/clariti__CashierSession__c/fields/clariti__TotalDepositBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalDepositBalance__c</fullName>
    <formula>clariti__TotalCashDepositBalance__c +  clariti__TotalCheckDepositBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deposit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>