force-app/main/default/objects/clariti__CashierSession__c/validationRules/clariti__CashierIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__CashierIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(clariti__Cashier__c)</errorConditionFormula>
    <errorDisplayField>clariti__Cashier__c</errorDisplayField>
    <errorMessage>Cashier is required.</errorMessage>
</ValidationRule>