force-app/main/default/objects/clariti__CashierSession__c/validationRules/clariti__SupervisorCanNotEditSessionWithBankDep.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__SupervisorCanNotEditSessionWithBankDep</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(clariti__Status__c , &apos;Closed&apos;) &amp;&amp; $Permission.clariti__ManageCashierSessions &amp;&amp; NOT(ISBLANK(clariti__BankDeposit__c)) &amp;&amp; NOT(ISCHANGED(clariti__BankDeposit__c))</errorConditionFormula>
    <errorMessage>You do not have permission to edit a closed Cashier Session that has a Bank Deposit.</errorMessage>
</ValidationRule>