force-app/main/default/objects/clariti__CashierSession__c/validationRules/clariti__UserDoesNotHaveEditClosedSessionPerm.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__UserDoesNotHaveEditClosedSessionPerm</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(clariti__Status__c , &apos;Closed&apos;) &amp;&amp; NOT($Permission.clariti__ManageCashierSessions)</errorConditionFormula>
    <errorMessage>You do not have permission to edit a closed Cashier Session.</errorMessage>
</ValidationRule>