force-app/main/default/objects/clariti__CashierSession__c/validationRules/clariti__UserDoesNotHaveManageCashierSessionPerm.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__UserDoesNotHaveManageCashierSessionPerm</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( clariti__Status__c , &apos;Rejected&apos;) || ISPICKVAL( clariti__Status__c , &apos;Closed&apos;)) &amp;&amp; NOT($Permission.clariti__ManageCashierSessions) &amp;&amp;  ISCHANGED(clariti__Status__c)</errorConditionFormula>
    <errorDisplayField>clariti__Status__c</errorDisplayField>
    <errorMessage>You do not have permission to manage Cashier Sessions.</errorMessage>
</ValidationRule>