force-app/main/default/objects/clariti__CashierSession__c/listViews/clariti__CashierSessionsSubmittedForReview.listView-meta.xml
<ListView>
    <fullName>clariti__CashierSessionsSubmittedForReview</fullName>
    <columns>NAME</columns>
    <columns>clariti__Status__c</columns>
    <columns>clariti__Cashier__c</columns>
    <columns>clariti__CashTray__c</columns>
    <columns>clariti__TotalDepositBalance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clariti__Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Cashier Sessions Submitted for Review</label>
</ListView>