force-app/main/default/objects/clariti__CashierSession__c/listViews/clariti__OpenCashierSessions.listView-meta.xml
<ListView>
    <fullName>clariti__OpenCashierSessions</fullName>
    <columns>NAME</columns>
    <columns>clariti__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>clariti__TotalDepositBalance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>clariti__Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Cashier Sessions</label>
</ListView>